<resources>
    <string name="app_name">GeTa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarme">Registrarme</string>
    <string name="acceder">Acceder</string>
    <string name="he_olvidado_la_contrase_a">He olvidado la contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login_email">Login/Email</string>
    <string name="cancelar">Cancelar</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="e_mail">E-mail</string>
    <string name="login">Login</string>
    <string name="nombre">Nombre</string>
    <string name="modificar_datos">Modificar Datos</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="guardar">Guardar</string>
    <string name="proyectos">Proyectos</string>
    <string name="usuario_asignado">Usuario Asignado</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="lista">Lista</string>
    <string name="nombre_proyecto">Nombre_de_Proyecto</string>
    <string name="siguiente">Siguiente</string>
    <string name="color">Color</string>
    <string name="icono">Icono</string>
    <string name="salir">Salir</string>
    <string name="nombre_del_proyecto">Nombre del proyecto</string>
    <string name="descripcion">Descripción</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam et massa vel neque interdum ultrices.Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus pretium vel nisi eget vulputate. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus tincidunt diam sed metus pellentesque.</string>
    <string name="usuarios_asignados">Usuarios asignados</string>
    <string name="almacenamiento">¿Permitir a GeTa acceder a tu almacenamiento?</string>
    <string name="no_volver_a_preguntar">No volver a preguntar</string>
    <string name="a_adir_tarea">Añadir Tarea</string>
    <string name="crear_proyecto">Crear Proyecto</string>
    <string name="enviaremos_un_mail_de_recuperaci_n_de_contrase_a">Enviaremos un mail de recuperación de contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="e_mail_short">E-mail</string>
    <string name="angelcm_elpuig_xeill_cat">angelcm@elpuig.xeill.cat</string>
    <string name="angelcm08">angelcm08</string>
    <string name="ngel_castro_merino">Ángel Castro Merino</string>
    <string name="informaci_n_usuario">Información Usuario</string>
    <string name="seguro_que_quieres_eliminar_el_proyecto">¿Seguro que quieres eliminar el Proyecto?</string>
    <string name="nombre_tarea">Nombre_Tarea</string>
</resources>