<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48799C"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill|fill_vertical"
        android:background="#48799C"
        app:alignContent="center"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <!-- Imagen del logo de la app en la parte superior -->
        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_calendar" />

        <!-- Input para el nombre del usuario -->
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_input"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/nombre"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro" />

        <!-- Input para el login del usuario -->
        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_input"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro" />

        <!-- Input para el E-mail del usuario -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_input"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro" />

        <!-- Input para la contraseña del usuario -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_input"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro" />

        <!-- Input para la contraseña repetida del usuario -->
        <EditText
            android:id="@+id/input_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_input"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/repetir_contrase_a"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/gris_oscuro"
            android:textColorHint="@color/gris_oscuro" />

        <!-- Botones de Acceder y Registrarme en una fila -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:alignContent="center"
            app:alignItems="center"
            app:flexDirection="row"
            app:justifyContent="space_between">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Botón para registrarse -->
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_button_dark"
                    android:paddingStart="25dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="14dp"
                    android:textSize="20sp"
                    android:text="@string/registrarme"
                    android:textColor="@color/beix" />

                <!-- Botón para cancelar -->
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:paddingStart="25dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="25dp"
                    android:paddingBottom="14dp"
                    android:textSize="20sp"
                    android:textColor="@color/dark_blue"
                    android:background="@drawable/shape_button_light"
                    android:text="@string/cancelar"/>
            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>
</ScrollView>