<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#48799C">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:padding="16dp"
        android:text="@string/editar_usuario"
        android:textAlignment="center"
        android:textColor="@color/beix"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="0dp"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexboxLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#48799C"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="25dp"
                android:layout_marginBottom="10dp">

                <!-- Imagen del logo de la app en la parte superior -->
                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/default_user_image"
                    android:background="@color/dark_blue"
                    android:padding="15dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Input para el nombre del usuario -->
            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_input"
                android:drawablePadding="10dp"
                android:hint="@string/nombre"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/gris_oscuro"
                android:textColorHint="@color/gris_oscuro" />

            <!-- Input para el login del usuario -->
            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_input"
                android:drawablePadding="10dp"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/gris_oscuro"
                android:textColorHint="@color/gris_oscuro" />

            <!-- Input para el E-mail del usuario -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shape_input"
                android:drawablePadding="10dp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/gris_oscuro"
                android:textColorHint="@color/gris_oscuro" />

            <!-- Botones de Acceder y Registrarme en una fila -->
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:alignContent="center"
                app:alignItems="center"
                app:flexDirection="row"
                app:justifyContent="space_between">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/modifyData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_button_dark"
                        android:paddingStart="25dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="25dp"
                        android:paddingBottom="14dp"
                        android:text="@string/modificar_datos"
                        android:textColor="@color/beix"
                        android:textSize="20sp" />

                    <!-- Botón para cancelar -->
                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/shape_button_light"
                        android:paddingStart="25dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="25dp"
                        android:paddingBottom="14dp"
                        android:text="@string/cancelar"
                        android:textColor="@color/dark_blue"
                        android:textSize="20sp" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>